# icecube

./: .gitignore  Cargo.toml  Dockerfile  README.md  build-wheel.sh  download_papers.py  pyproject.toml
examples/: hello.py
icecube/: __init__.py  icecube.pyi
src/: dataset.rs  geometry.rs  lib.rs  main.rs  vectors.rs
src/utils/: helpers.rs
