[package]
name = "icecube"
version = "0.1.0"
edition = "2021"
authors = [
    "Najib Ishaq <nishaq@zoho.com>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "icecube"
crate-type = ["cdylib", "rlib"]

[dependencies]
libm = "0.2.6"
ndarray = { version = "0.15.6", features = ["rayon"] }
polars = "0.26.1"
pyo3 = { version = "0.18.0", features = ["extension-module"] }
rayon = "1.6.1"
