[package]
name = "icecube"
version = "0.1.0"
edition = "2021"
authors = [
    "Najib Ishaq <najib_ishaq@zoho.com>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "icecube"
crate-type = ["cdylib", "rlib"]

[dependencies]
libm = "0.2.6"
pyo3 = { version = "0.18.0", features = ["extension-module"] }
